# evolutionary-computations

./: .flake8  .gitignore  .mise.toml  README.md  config.yaml  flake.nix  main.py  pyproject.toml  requirements.txt
delivery/: __main__.py
examples/: basic.py  study.py  tsp.py
scripts/: delivery_data.py
src/: config.py
src/algo/: aco.py  bee_colony.py  deformed_stars.py  diff_evolution.py  evo_strategy.py  fractal_structurization.py  genetic_programming.py  simulated_annealing.py  symbiotic_optimisation.py
src/delivery/: __main__.py
src/evocomp/: __init__.py
src/evocomp/algorithms/evolutionary/: diff_evolution.py  evo_strategy.py  genetic_programming.py  symbiotic_optimisation.py
src/evocomp/algorithms/other/: deformed_stars.py  fractal_structurization.py  simulated_annealing.py
src/evocomp/algorithms/swarm/: aco.py  ant.py  bee_colony.py
src/evocomp/core/: candidate.py  halt_criteria.py  objective.py  optimizer.py
src/evocomp/visualization/: __init__.py
src/evocomp/visualization/display/: config.py  console.py  formatters.py
src/evocomp/visualization/export/: formats.py
src/evocomp/visualization/plotting/: histories.py
src/evocomp/visualization/study/: result.py  runner.py
src/lib/: common.py  constants.py  functions.py  genetic_operations.py  population_init.py  stats.py  stop_criteria.py  util.py
