[project]
name = "evocomp"
version = "0.1.0"
authors = [{ name = "Lex Miin", email = "hello@lexunix.me" }]
description = "Evolutionary algorithms implementation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "openpyxl>=3.1.2",
  "pandas>=2.1.1",
  "scipy>=1.11.4",
]

[build-system]
requires = ["hatchling>=1.12.1", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/evocomp"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
ignore = ["E741", "E203"]

[tool.ruff.lint]
extend-select = ["UP019", "I001"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
